class EgresadoInfoVM:
    
    def __init__(self, link, nombre, universidad, carrera):
        self.link = link
        self.nombre = nombre
        self.universidad = universidad
        self.carrera = carrera