from EgresadoInfoVM import EgresadoInfoVM

class ExperienciaVM:
    
    def __init__(self, empresa, puesto, descripcion, duracion, fechaInicio, fechaFin):
        self.empresa = empresa
        self.puesto = puesto
        self.descripcion = descripcion
        self.duracion = duracion
        self.fechaInicio = fechaInicio
        self.fechaFin = fechaFin
        