class linkVM:
    
    def __init__(self, link, pivote):
        self.link = link